# brewin-loop

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
brewin/: __init__.py  agent.py  checkpoint.py  config.py  context.py  cycles.py  discoveries.py  healthcheck.py  hooks.py  loop.py  state.py  worktree.py
brewin/prompts/: __init__.py  micro_replan.md  pua_micro_replan.md  pua_overlay.md  system.md
brewin/prompts/cycles/: cleanup.md  continue_work.md  debug.md  deep_work.md  explore.md  heal.md  perf.md  planning.md  pua_pressure.md  quick_fix.md  refactor.md  replan.md  research.md  review.md  security_audit.md  ship.md  spike.md  synthesize.md  test.md
docs/: CLI.md
