[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brewin-loop"
version = "0.1.0"
description = "Brewin Loop — autonomous, time-based development agent powered by Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "John Peter"}]
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
brewin = "brewin.loop:main"

[tool.hatch.build.targets.wheel]
packages = ["brewin"]
